codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__profile_login_name_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
▌ ChatGPT profile
▌ Use letters, numbers, dots, dashes, or underscores
▌
▌ Profile name

Press enter to confirm or esc to go back
