codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__profile_selection_popup_groups_by_usage.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Profile
  Switch auth for this session.

     Active profiles
  1. beta-high           ChatGPT Pro
  2. alpha-low           ChatGPT Pro
› 3. default (current)   usage unknown
     Exhausted profiles
  4. zeta-spent          ChatGPT Pro
  5. Log in new profile  Create a saved auth profile

  Enter switch / l relogin / r rename / d delete / s settings / [ up / ] down
  Press enter to confirm or esc to go back
