codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__profile_selection_popup_profile_actions.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Profile
  Switch auth for this session.

     Active profiles
  1. default (current)   Root login
› 2. personal            ChatGPT · usage loading…
  3. work                ChatGPT API key
  4. Log in new profile  Create a saved auth profile

  Enter switch / l relogin / r rename / d delete / s settings / [ up / ] down
  Press enter to confirm or esc to go back
